# SockFuzzerAppleSillicon

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: build.yml
cmake/: localize_syms.sh  xnu_exported_symbols.txt
corpus/seeds/: README.md
docs/: ARCHITECTURE.md  EXTENDING.md
findings_new/: crash-361332be8b0df890f712d59a1ab16052e2456759  crash-69f79802224ed5f9936ad486c6f3d34d9a28c3d4  crash-d52f67f402dc30c4c9e355a114da91af99b80f43
fuzz/: net_fuzzer.cc  net_fuzzer.proto
fuzz/api/: backend.c  ioctl.c  syscall_wrappers.c  syscall_wrappers.h
fuzz/concurrent/: concurrent_harness.cc  concurrent_harness.h
fuzz/executor/: coroutine_executor.cc
fuzz/fakes/: fake_impls.c  fake_impls_test.cc  mbuf.c  osfmk_stubs.c  san.c  stubs.c  thread.c  zalloc.c
fuzz/snapshot/: fork_server.c  fork_server.h
scripts/: ai_corpus_guide.py  crash_pipeline.sh  diff_fuzz.sh  frida_verify.py  generate_seeds.sh  triage.sh
tests/regression/: README.md
tests/regression/CVE-2019-8605/: README.md  verify.sh
